--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "homebridge-sonoff-tasmota-http +Cache",
+  "name": "homebridge-sonoff-tasmota-http-cached",
   "version": "1.3.0",
   "description": "Control Sonoff Basic devices with Tasmota >5.10.0b firmware through Homebridge",
   "main": "index.js",
